@@ -3,7 +3,14 @@
 
 New:
 
-* Define accessors for class fields.
+* Defined accessors for class fields.
+* New fields: package, file, line, subroutine.
+* Exception::Base->new() collects system data.
+* $e->throw() does not overrides existing caller stack.
+* New "$e->throw(overriden=>'value')" syntax for rethrowing the exception with
+  overriden some field.
+* New "Exception::Base->throw($e, ...)" syntax for rethrowing the exception
+  with changed own class.
 
 ------------------------------------------------------------------------
 0.08 | Piotr Roszatycki <dexter@debian.org> | 2007-10-06
